--- a/client/src/app/contact/contact.component.html
+++ b/client/src/app/contact/contact.component.html
@@ -1,1 +1,14 @@
-<p>contact works!</p>
+<div class="ui card">
+    <div class="image">
+        <img [src]="contact?.photoUrl">
+    </div>
+    <div class="content">
+        <a class="header">{{contact?.name}}</a>
+        <div class="description">
+            {{contact?.address}}
+        </div>
+    </div>
+    <div class="extra content">
+        <span><i class="call icon">{{contact?.phone}}</i></span>
+    </div>
+</div>
