--- a/client/src/app/add-contact/add-contact.component.html
+++ b/client/src/app/add-contact/add-contact.component.html
@@ -1,1 +1,47 @@
-<p>add-contact works!</p>
+<div class="add-form-container">
+    <div class="ui icon message" *ngIf="newContact">
+        <i class="notched check green icon"></i>
+        <i class="close icon" (click)="newContact = null"></i>
+        <div class="content">
+            <div class="header">
+                New Contact added!
+            </div>
+            <p>Name: {{newContact.name}}</p>
+        </div>
+    </div>
+    <form class="ui big form" #contactForm="ngForm" (submit)="onSubmit(contactForm)" [class.loading]="loading">
+        <div class="fields">
+            <div class="eight wide field">
+                <label>First Name</label>
+                <input type="text" name="firstName" placeholder="First Name" ngModel>
+            </div>
+            <div class="eight wide field">
+                <label>Last Name</label>
+                <input type="text" name="lastName" placeholder="Last Name" ngModel>
+            </div>
+        </div>
+        <div class="field">
+            <label>Address</label>
+            <input type="text" name="address" placeholder="Address" ngModel>
+        </div>
+        <div class="equal width fields">
+            <div class="field">
+                <label>Phone</label>
+                <input type="text" name="areaCode" maxlength="5" placeholder="(###)" ngModel>
+            </div>
+            <div class="field">
+                <label>&nbsp;</label>
+                <input type="text" name="prefix" maxlength="3" placeholder="###" ngModel>
+            </div>
+            <div class="field">
+                <label>&nbsp;</label>
+                <input type="text" name="lineNumber" maxlength="4" placeholder="####" ngModel>
+            </div>
+        </div>
+        <div class="field">
+            <label>Photo URL</label>
+            <input type="text" name="photo" placeholder="http://cdn.com/profile.jpg" ngModel>
+        </div>
+        <button type="submit" class="ui submit large grey button right floated">Submit</button>
+    </form>
+</div>
